--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -69,7 +69,10 @@
   },
   {
    "source": [
-    "## Analyse de l'impact du changement de domaine"
+    "## Analyse de l'impact du changement de domaine\n",
+    "* identifier causes de la baisse de performance : analyse de sortie, matrice de confusion, erreurs les + fréquentes\n",
+    "* réfléchir à des caractéristiques plus adaptées\n",
+    "* sélection d'un nouvel ensemble d'apprentissage avec des exemples représentatif (généré par un modèle de langue type TP2)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -90,10 +93,7 @@
   },
   {
    "source": [
-    "## Développement de systèmes robutes au changement de domaine\n",
-    "* identifier causes de la baisse de performance : analyse de sortie, matrice de confusion, erreurs les + fréquentes\n",
-    "* réfléchir à des caractéristiques plus adaptées\n",
-    "* sélection d'un nouvel ensemble d'apprentissage avec des exemples représentatif (généré par un modèle de langue type TP2)"
+    "## Développement de systèmes robutes au changement de domaine"
    ],
    "cell_type": "markdown",
    "metadata": {}
