Implémentation + explication chargement corpus in-domain

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -39,7 +39,9 @@
   {
    "source": [
     "## Import du corpus\n",
-    "Cours Zoom du 17/12 - 35 min"
+    "Cours Zoom du 17/12 - 35 min\n",
+    "\n",
+    "On charge les trois corpus *in-domain* sous la forme de listes de listes de dictionnaires : chaque phrase est une liste de dictionnaire avec une clef : le mot, associée à son POS tag."
    ],
    "cell_type": "markdown",
    "metadata": {}
