--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -24,7 +24,8 @@
  "cells": [
   {
    "source": [
-    "# Projet TAL M1 S1 : POS Tagging"
+    "# Projet TAL M1 S1 : POS Tagging\n",
+    "structure du projet expliqué ici : https://u-paris.zoom.us/rec/share/rFB-gp7vkgMK31kfPxEsyNF2k6q7mHcq3P9MQiovimkr9ebIewZpuD62RBk6SmM.31Mmzx1VyMqQXRtu?startTime=1607605609000"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -65,7 +66,7 @@
     "            dico_mot = {} # dictionnaire qui contiendra les features d'un mot (mot, lemme, pos)\n",
     "            if not line.startswith(\"#\"): # on ignore les lignes qui commencent par #\n",
     "                features = line.split(\"\\t\")\n",
-    "                dico_mot[features[1]] = features[3]\n",
+    "                dico_mot[features[1]] = features[3] ####### \n",
     "                phrase_list.append(dico_mot)\n",
     "        corpus.append(phrase_list)\n",
     "    return corpus\n",
@@ -100,9 +101,19 @@
     "## Séparation des corpus d'apprentissage et de validation\n",
     "Cours Zoom du 17/12 - début\n",
     "\n",
-    "Cours Zoom du 19/12 ?\n",
+    "Cours Zoom du 10/12 ?\n",
     "\n",
-    "Déjà fait puisqu'on a 3 fichiers différents il me semble."
+    "Déjà fait puisqu'on a 3 fichiers différents il me semble.\n",
+    "\n",
+    "Il faut regarder ses cours pour comprendre les 3 corpus, et le noter ici. Dev ??"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Extraction des caractéristiques\n",
+    "\"    (*) Extraction des caractéristiques pour le PoS tagging. Les caractéristiques généralement utilisées sont le mot, le mot précédent, le mot suivant, la présence de certains préfixes, la présence de lettre en majuscule ; vous êtes libres de définir toutes les caractéristiques vous semblant pertinentes.\""
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -110,7 +121,7 @@
   {
    "source": [
     "## Implémentation de l'algorithme de classification\n",
-    "Il faut choisir une régression logistique ou un perceptron moyenné."
+    "Il faut choisir une régression logistique ou un perceptron moyenné. > plutôt perceptron (explication dans zoom 17/12)"
    ],
    "cell_type": "markdown",
    "metadata": {}
