implementation feature extraction

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -111,14 +111,14 @@
     "- mot suivant\n",
     "- commence par une lettre majuscule\n",
     "- est numérique\n",
-    "- contient des caractères non alphanumériques"
+    "- contient des caractères non alphanumériques > peut-être pas très pertinent car ça va pas distinguer les apostrophes des slashs par exemple."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
