ajout features (longueur)

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "---- Aperçus d'une phrase de chaque corpus-----\n\n[{'mot': \"L'\", 'POS': 'DET'}, {'mot': 'œuvre', 'POS': 'NOUN'}, {'mot': 'est', 'POS': 'AUX'}, {'mot': 'située', 'POS': 'VERB'}, {'mot': 'dans', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'galerie', 'POS': 'NOUN'}, {'mot': 'des', 'POS': '_'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'les', 'POS': 'DET'}, {'mot': 'batailles', 'POS': 'NOUN'}, {'mot': ',', 'POS': 'PUNCT'}, {'mot': 'dans', 'POS': 'ADP'}, {'mot': 'le', 'POS': 'DET'}, {'mot': 'château', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'Versailles', 'POS': 'PROPN'}, {'mot': '.', 'POS': 'PUNCT'}]\n\n[{'mot': 'Ce', 'POS': 'DET'}, {'mot': 'résultat', 'POS': 'NOUN'}, {'mot': 'provient', 'POS': 'VERB'}, {'mot': 'à', 'POS': 'ADP'}, {'mot': 'hauteur', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': '18,5', 'POS': 'NUM'}, {'mot': 'ME', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'progression', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'rentabilité', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': \"l'\", 'POS': 'DET'}, {'mot': 'habitat', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'loisirs', 'POS': 'NOUN'}, {'mot': 'qui', 'POS': 'PRON'}, {'mot': 'dégage', 'POS': 'VERB'}, {'mot': 'une', 'POS': 'DET'}, {'mot': 'marge', 'POS': 'NOUN'}, {'mot': 'opérationnelle', 'POS': 'ADJ'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': '9,5', 'POS': 'NUM'}, {'mot': '%', 'POS': 'SYM'}, {'mot': 'contre', 'POS': 'ADP'}, {'mot': '8,5', 'POS': 'NUM'}, {'mot': '%', 'POS': 'SYM'}, {'mot': \"l'\", 'POS': 'DET'}, {'mot': 'année', 'POS': 'NOUN'}, {'mot': 'passée', 'POS': 'ADJ'}, {'mot': '.', 'POS': 'PUNCT'}]\n\n[{'mot': 'Cette', 'POS': 'DET'}, {'mot': 'espèce', 'POS': 'NOUN'}, {'mot': 'est', 'POS': 'AUX'}, {'mot': 'endémique', 'POS': 'ADJ'}, {'mot': 'du', 'POS': '_'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'le', 'POS': 'DET'}, {'mot': 'département', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'Nariño', 'POS': 'PROPN'}, {'mot': 'en', 'POS': 'ADP'}, {'mot': 'Colombie', 'POS': 'PROPN'}, {'mot': '.', 'POS': 'PUNCT'}]\n"
+      "---- Aperçus d'une phrase de chaque corpus-----\n\n[{'mot': \"L'\", 'POS': 'DET', 'préc': 'START', 'suiv': 'œuvre', 'maj': True, 'nb': False, 'non alphanum': True}, {'mot': 'œuvre', 'POS': 'NOUN', 'préc': \"L'\", 'suiv': 'est', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'est', 'POS': 'AUX', 'préc': 'œuvre', 'suiv': 'située', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'située', 'POS': 'VERB', 'préc': 'est', 'suiv': 'dans', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'dans', 'POS': 'ADP', 'préc': 'située', 'suiv': 'la', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'la', 'POS': 'DET', 'préc': 'dans', 'suiv': 'galerie', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'galerie', 'POS': 'NOUN', 'préc': 'la', 'suiv': 'des', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'des', 'POS': '_', 'préc': 'galerie', 'suiv': 'de', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'de', 'POS': 'ADP', 'préc': 'des', 'suiv': 'les', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'les', 'POS': 'DET', 'préc': 'de', 'suiv': 'batailles', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'batailles', 'POS': 'NOUN', 'préc': 'les', 'suiv': ',', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': ',', 'POS': 'PUNCT', 'préc': 'batailles', 'suiv': 'dans', 'maj': False, 'nb': False, 'non alphanum': True}, {'mot': 'dans', 'POS': 'ADP', 'préc': ',', 'suiv': 'le', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'le', 'POS': 'DET', 'préc': 'dans', 'suiv': 'château', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'château', 'POS': 'NOUN', 'préc': 'le', 'suiv': 'de', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'de', 'POS': 'ADP', 'préc': 'château', 'suiv': 'Versailles', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'Versailles', 'POS': 'PROPN', 'préc': 'de', 'suiv': '.', 'maj': True, 'nb': False, 'non alphanum': False}, {'mot': '.', 'POS': 'PUNCT', 'préc': 'Versailles', 'suiv': 'END', 'maj': False, 'nb': False, 'non alphanum': True}]\n\n[{'mot': 'Ce', 'POS': 'DET'}, {'mot': 'résultat', 'POS': 'NOUN'}, {'mot': 'provient', 'POS': 'VERB'}, {'mot': 'à', 'POS': 'ADP'}, {'mot': 'hauteur', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': '18,5', 'POS': 'NUM'}, {'mot': 'ME', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'progression', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'rentabilité', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': \"l'\", 'POS': 'DET'}, {'mot': 'habitat', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'loisirs', 'POS': 'NOUN'}, {'mot': 'qui', 'POS': 'PRON'}, {'mot': 'dégage', 'POS': 'VERB'}, {'mot': 'une', 'POS': 'DET'}, {'mot': 'marge', 'POS': 'NOUN'}, {'mot': 'opérationnelle', 'POS': 'ADJ'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': '9,5', 'POS': 'NUM'}, {'mot': '%', 'POS': 'SYM'}, {'mot': 'contre', 'POS': 'ADP'}, {'mot': '8,5', 'POS': 'NUM'}, {'mot': '%', 'POS': 'SYM'}, {'mot': \"l'\", 'POS': 'DET'}, {'mot': 'année', 'POS': 'NOUN'}, {'mot': 'passée', 'POS': 'ADJ'}, {'mot': '.', 'POS': 'PUNCT'}]\n\n[{'mot': 'Cette', 'POS': 'DET'}, {'mot': 'espèce', 'POS': 'NOUN'}, {'mot': 'est', 'POS': 'AUX'}, {'mot': 'endémique', 'POS': 'ADJ'}, {'mot': 'du', 'POS': '_'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'le', 'POS': 'DET'}, {'mot': 'département', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'Nariño', 'POS': 'PROPN'}, {'mot': 'en', 'POS': 'ADP'}, {'mot': 'Colombie', 'POS': 'PROPN'}, {'mot': '.', 'POS': 'PUNCT'}]\n"
      ]
     }
    ],
@@ -111,21 +111,22 @@
     "- mot suivant\n",
     "- commence par une lettre majuscule\n",
     "- est numérique\n",
-    "- contient des caractères non alphanumériques > peut-être pas très pertinent car ça va pas distinguer les apostrophes des slashs par exemple."
+    "- contient des caractères non alphanumériques > peut-être pas très pertinent car ça va pas distinguer les apostrophes des slashs, ou des points par exemple... à essayer quand même ?\n",
+    "- longueur du mot"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'mot': 'Ismene', 'POS': 'PROPN', 'préc': 'START', 'suiv': 'entre', 'maj': True, 'nb': False, 'non alphanum': False}\n{'mot': 'entre', 'POS': 'VERB', 'préc': 'Ismene', 'suiv': 'et', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'et', 'POS': 'CCONJ', 'préc': 'entre', 'suiv': 'annonce', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'annonce', 'POS': 'VERB', 'préc': 'et', 'suiv': 'que', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'que', 'POS': 'SCONJ', 'préc': 'annonce', 'suiv': \"c'\", 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': \"c'\", 'POS': 'PRON', 'préc': 'que', 'suiv': 'est', 'maj': False, 'nb': False, 'non alphanum': True}\n{'mot': 'est', 'POS': 'AUX', 'préc': \"c'\", 'suiv': 'Farnace', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'Farnace', 'POS': 'PROPN', 'préc': 'est', 'suiv': 'qui', 'maj': True, 'nb': False, 'non alphanum': False}\n{'mot': 'qui', 'POS': 'PRON', 'préc': 'Farnace', 'suiv': 'a', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'a', 'POS': 'AUX', 'préc': 'qui', 'suiv': 'mis', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'mis', 'POS': 'VERB', 'préc': 'a', 'suiv': 'le', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'le', 'POS': 'DET', 'préc': 'mis', 'suiv': 'feu', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'feu', 'POS': 'NOUN', 'préc': 'le', 'suiv': 'à', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'à', 'POS': 'ADP', 'préc': 'feu', 'suiv': 'la', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'la', 'POS': 'DET', 'préc': 'à', 'suiv': 'flotte', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'flotte', 'POS': 'NOUN', 'préc': 'la', 'suiv': 'romaine', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': 'romaine', 'POS': 'ADJ', 'préc': 'flotte', 'suiv': '.', 'maj': False, 'nb': False, 'non alphanum': False}\n{'mot': '.', 'POS': 'PUNCT', 'préc': 'romaine', 'suiv': 'END', 'maj': False, 'nb': False, 'non alphanum': True}\n"
+      "{'mot': 'Ismene', 'POS': 'PROPN', 'préc': 'START', 'suiv': 'entre', 'maj': True, 'nb': False, 'non alphanum': False, 'longueur': 6}\n{'mot': 'entre', 'POS': 'VERB', 'préc': 'Ismene', 'suiv': 'et', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 5}\n{'mot': 'et', 'POS': 'CCONJ', 'préc': 'entre', 'suiv': 'annonce', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 2}\n{'mot': 'annonce', 'POS': 'VERB', 'préc': 'et', 'suiv': 'que', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 7}\n{'mot': 'que', 'POS': 'SCONJ', 'préc': 'annonce', 'suiv': \"c'\", 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': \"c'\", 'POS': 'PRON', 'préc': 'que', 'suiv': 'est', 'maj': False, 'nb': False, 'non alphanum': True, 'longueur': 2}\n{'mot': 'est', 'POS': 'AUX', 'préc': \"c'\", 'suiv': 'Farnace', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'Farnace', 'POS': 'PROPN', 'préc': 'est', 'suiv': 'qui', 'maj': True, 'nb': False, 'non alphanum': False, 'longueur': 7}\n{'mot': 'qui', 'POS': 'PRON', 'préc': 'Farnace', 'suiv': 'a', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'a', 'POS': 'AUX', 'préc': 'qui', 'suiv': 'mis', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 1}\n{'mot': 'mis', 'POS': 'VERB', 'préc': 'a', 'suiv': 'le', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'le', 'POS': 'DET', 'préc': 'mis', 'suiv': 'feu', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 2}\n{'mot': 'feu', 'POS': 'NOUN', 'préc': 'le', 'suiv': 'à', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'à', 'POS': 'ADP', 'préc': 'feu', 'suiv': 'la', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 1}\n{'mot': 'la', 'POS': 'DET', 'préc': 'à', 'suiv': 'flotte', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 2}\n{'mot': 'flotte', 'POS': 'NOUN', 'préc': 'la', 'suiv': 'romaine', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 6}\n{'mot': 'romaine', 'POS': 'ADJ', 'préc': 'flotte', 'suiv': '.', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 7}\n{'mot': '.', 'POS': 'PUNCT', 'préc': 'romaine', 'suiv': 'END', 'maj': False, 'nb': False, 'non alphanum': True, 'longueur': 1}\n"
      ]
     }
    ],
@@ -140,11 +141,13 @@
     "    maj = \"maj\"\n",
     "    num = \"nb\"\n",
     "    nonAlphanum = \"non alphanum\"\n",
+    "    long = \"longueur\"\n",
     "\n",
     "    corpus_features = corpus.copy() # copie de la liste pour ne pas modifier la liste d'origine\n",
     "\n",
     "    for phrase in corpus_features: # ajout des features additionnelles\n",
-    "        for prev, word, suiv in zip([{mot : \"START\"}] + phrase[:-1], phrase, phrase[1:] + [{mot : \"END\"}]): # on crée des triplets de mot précédent, mot, mot suivant\n",
+    "        for prev, word, suiv in zip([{mot : \"START\"}] + phrase[:-1], phrase, phrase[1:] + [{mot : \"END\"}]):\n",
+    "            # création de triplets (mot précédent, mot, mot suivant)\n",
     "            # avec \"START\" en prev pour le 1er mot\n",
     "            # et \"END\" en suiv pour le dernier\n",
     "            word.update({\n",
@@ -152,7 +155,8 @@
     "                mot_suiv : suiv[mot],\n",
     "                maj : word[mot].istitle(),\n",
     "                num : word[mot].isnumeric(),\n",
-    "                nonAlphanum : not word[mot].isalnum()})\n",
+    "                nonAlphanum : not word[mot].isalnum(),\n",
+    "                long : len(word[mot])})\n",
     "\n",
     "    return corpus_features\n",
     "\n",
