--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -42,7 +42,7 @@
     "## Import du corpus\n",
     "Cours Zoom du 17/12 - 35 min\n",
     "\n",
-    "On charge les trois corpus *in-domain* sous la forme de listes de listes de dictionnaires : chaque phrase est une liste de dictionnaire avec une clef : le mot, associée à son POS tag. \n",
+    "On charge les trois corpus *in-domain* sous la forme de listes de dictionnaires : chaque phrase a une clé \"mots\" qui est associée à une liste des mots, et une clé \"POS\" associée à une liste de POS. \n",
     "\n",
     "On utilise les trois corpus distincts de French-GSD :\n",
     "- Train : apprentissage.\n",
@@ -66,15 +66,13 @@
     "    content = content.split(\"\\n\\n\") # séparation en phrases\n",
     "    corpus = []\n",
     "    for phrase in content: # pour chaque phrase\n",
-    "        phrase_list = [] # liste qui contiendra 1 dictionnaire par mot de la phrase\n",
+    "        phrase_dico = {\"mots\" : [], \"POS\" : []} # liste qui contiendra 1 dictionnaire par mot de la phrase\n",
     "        for line in phrase.splitlines():\n",
-    "            dico_mot = {} # dictionnaire qui contiendra les features d'un mot (mot, lemme, pos)\n",
     "            if not line.startswith(\"#\"): # on ignore les lignes qui commencent par #\n",
     "                features = line.split(\"\\t\")\n",
-    "                dico_mot[\"mot\"] = features[1] ####### \n",
-    "                dico_mot[\"POS\"] = features[3]\n",
-    "                phrase_list.append(dico_mot)\n",
-    "        corpus.append(phrase_list)\n",
+    "                phrase_dico[\"mots\"].append(features[1])\n",
+    "                phrase_dico[\"POS\"].append(features[3])\n",
+    "        corpus.append(phrase_dico)\n",
     "    return corpus\n",
     "\n",
     "gsd_train = load_corpus(\"corpus-in-domain/fr_gsd-ud-train.conllu\")\n",
@@ -84,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "---- Aperçus d'une phrase de chaque corpus-----\n\n[{'mot': \"L'\", 'POS': 'DET', 'préc': 'START', 'suiv': 'œuvre', 'maj': True, 'nb': False, 'non alphanum': True}, {'mot': 'œuvre', 'POS': 'NOUN', 'préc': \"L'\", 'suiv': 'est', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'est', 'POS': 'AUX', 'préc': 'œuvre', 'suiv': 'située', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'située', 'POS': 'VERB', 'préc': 'est', 'suiv': 'dans', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'dans', 'POS': 'ADP', 'préc': 'située', 'suiv': 'la', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'la', 'POS': 'DET', 'préc': 'dans', 'suiv': 'galerie', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'galerie', 'POS': 'NOUN', 'préc': 'la', 'suiv': 'des', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'des', 'POS': '_', 'préc': 'galerie', 'suiv': 'de', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'de', 'POS': 'ADP', 'préc': 'des', 'suiv': 'les', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'les', 'POS': 'DET', 'préc': 'de', 'suiv': 'batailles', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'batailles', 'POS': 'NOUN', 'préc': 'les', 'suiv': ',', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': ',', 'POS': 'PUNCT', 'préc': 'batailles', 'suiv': 'dans', 'maj': False, 'nb': False, 'non alphanum': True}, {'mot': 'dans', 'POS': 'ADP', 'préc': ',', 'suiv': 'le', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'le', 'POS': 'DET', 'préc': 'dans', 'suiv': 'château', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'château', 'POS': 'NOUN', 'préc': 'le', 'suiv': 'de', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'de', 'POS': 'ADP', 'préc': 'château', 'suiv': 'Versailles', 'maj': False, 'nb': False, 'non alphanum': False}, {'mot': 'Versailles', 'POS': 'PROPN', 'préc': 'de', 'suiv': '.', 'maj': True, 'nb': False, 'non alphanum': False}, {'mot': '.', 'POS': 'PUNCT', 'préc': 'Versailles', 'suiv': 'END', 'maj': False, 'nb': False, 'non alphanum': True}]\n\n[{'mot': 'Ce', 'POS': 'DET'}, {'mot': 'résultat', 'POS': 'NOUN'}, {'mot': 'provient', 'POS': 'VERB'}, {'mot': 'à', 'POS': 'ADP'}, {'mot': 'hauteur', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': '18,5', 'POS': 'NUM'}, {'mot': 'ME', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'progression', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'la', 'POS': 'DET'}, {'mot': 'rentabilité', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': \"l'\", 'POS': 'DET'}, {'mot': 'habitat', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'loisirs', 'POS': 'NOUN'}, {'mot': 'qui', 'POS': 'PRON'}, {'mot': 'dégage', 'POS': 'VERB'}, {'mot': 'une', 'POS': 'DET'}, {'mot': 'marge', 'POS': 'NOUN'}, {'mot': 'opérationnelle', 'POS': 'ADJ'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': '9,5', 'POS': 'NUM'}, {'mot': '%', 'POS': 'SYM'}, {'mot': 'contre', 'POS': 'ADP'}, {'mot': '8,5', 'POS': 'NUM'}, {'mot': '%', 'POS': 'SYM'}, {'mot': \"l'\", 'POS': 'DET'}, {'mot': 'année', 'POS': 'NOUN'}, {'mot': 'passée', 'POS': 'ADJ'}, {'mot': '.', 'POS': 'PUNCT'}]\n\n[{'mot': 'Cette', 'POS': 'DET'}, {'mot': 'espèce', 'POS': 'NOUN'}, {'mot': 'est', 'POS': 'AUX'}, {'mot': 'endémique', 'POS': 'ADJ'}, {'mot': 'du', 'POS': '_'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'le', 'POS': 'DET'}, {'mot': 'département', 'POS': 'NOUN'}, {'mot': 'de', 'POS': 'ADP'}, {'mot': 'Nariño', 'POS': 'PROPN'}, {'mot': 'en', 'POS': 'ADP'}, {'mot': 'Colombie', 'POS': 'PROPN'}, {'mot': '.', 'POS': 'PUNCT'}]\n"
+      "---- Aperçus d'une phrase de chaque corpus-----\n\n{'mots': [\"L'\", 'œuvre', 'est', 'située', 'dans', 'la', 'galerie', 'des', 'de', 'les', 'batailles', ',', 'dans', 'le', 'château', 'de', 'Versailles', '.'], 'POS': ['DET', 'NOUN', 'AUX', 'VERB', 'ADP', 'DET', 'NOUN', '_', 'ADP', 'DET', 'NOUN', 'PUNCT', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'PUNCT']}\n\n{'mots': ['Ce', 'résultat', 'provient', 'à', 'hauteur', 'de', '18,5', 'ME', 'de', 'la', 'progression', 'de', 'la', 'rentabilité', 'de', \"l'\", 'habitat', 'de', 'loisirs', 'qui', 'dégage', 'une', 'marge', 'opérationnelle', 'de', '9,5', '%', 'contre', '8,5', '%', \"l'\", 'année', 'passée', '.'], 'POS': ['DET', 'NOUN', 'VERB', 'ADP', 'NOUN', 'ADP', 'NUM', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PRON', 'VERB', 'DET', 'NOUN', 'ADJ', 'ADP', 'NUM', 'SYM', 'ADP', 'NUM', 'SYM', 'DET', 'NOUN', 'ADJ', 'PUNCT']}\n\n{'mots': ['Cette', 'espèce', 'est', 'endémique', 'du', 'de', 'le', 'département', 'de', 'Nariño', 'en', 'Colombie', '.'], 'POS': ['DET', 'NOUN', 'AUX', 'ADJ', '_', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'ADP', 'PROPN', 'PUNCT']}\n"
      ]
     }
    ],
@@ -105,13 +103,13 @@
   {
    "source": [
     "## Extraction des caractéristiques\n",
-    "Pour clarifier le pipeline, nous allons construire de nouveaux dictionnaires qui contiennent pour chaque mot toutes les caractéristiques que nous allons utiliser dans le perceptron :\n",
+    "Pour clarifier le pipeline, nous allons ajouter à notre corpus des nouvelles entrées dans les dictionnaires de chaque phrase afin de stocker les caractéristiques suivantes :\n",
     "- mot\n",
     "- mot précédent\n",
     "- mot suivant\n",
     "- commence par une lettre majuscule\n",
     "- est numérique\n",
-    "- contient des caractères non alphanumériques > peut-être pas très pertinent car ça va pas distinguer les apostrophes des slashs, ou des points par exemple... à essayer quand même ?\n",
+    "- contient des caractères non alphanumériques\n",
     "- longueur du mot"
    ],
    "cell_type": "markdown",
@@ -119,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'mot': 'Ismene', 'POS': 'PROPN', 'préc': 'START', 'suiv': 'entre', 'maj': True, 'nb': False, 'non alphanum': False, 'longueur': 6}\n{'mot': 'entre', 'POS': 'VERB', 'préc': 'Ismene', 'suiv': 'et', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 5}\n{'mot': 'et', 'POS': 'CCONJ', 'préc': 'entre', 'suiv': 'annonce', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 2}\n{'mot': 'annonce', 'POS': 'VERB', 'préc': 'et', 'suiv': 'que', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 7}\n{'mot': 'que', 'POS': 'SCONJ', 'préc': 'annonce', 'suiv': \"c'\", 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': \"c'\", 'POS': 'PRON', 'préc': 'que', 'suiv': 'est', 'maj': False, 'nb': False, 'non alphanum': True, 'longueur': 2}\n{'mot': 'est', 'POS': 'AUX', 'préc': \"c'\", 'suiv': 'Farnace', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'Farnace', 'POS': 'PROPN', 'préc': 'est', 'suiv': 'qui', 'maj': True, 'nb': False, 'non alphanum': False, 'longueur': 7}\n{'mot': 'qui', 'POS': 'PRON', 'préc': 'Farnace', 'suiv': 'a', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'a', 'POS': 'AUX', 'préc': 'qui', 'suiv': 'mis', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 1}\n{'mot': 'mis', 'POS': 'VERB', 'préc': 'a', 'suiv': 'le', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'le', 'POS': 'DET', 'préc': 'mis', 'suiv': 'feu', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 2}\n{'mot': 'feu', 'POS': 'NOUN', 'préc': 'le', 'suiv': 'à', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 3}\n{'mot': 'à', 'POS': 'ADP', 'préc': 'feu', 'suiv': 'la', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 1}\n{'mot': 'la', 'POS': 'DET', 'préc': 'à', 'suiv': 'flotte', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 2}\n{'mot': 'flotte', 'POS': 'NOUN', 'préc': 'la', 'suiv': 'romaine', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 6}\n{'mot': 'romaine', 'POS': 'ADJ', 'préc': 'flotte', 'suiv': '.', 'maj': False, 'nb': False, 'non alphanum': False, 'longueur': 7}\n{'mot': '.', 'POS': 'PUNCT', 'préc': 'romaine', 'suiv': 'END', 'maj': False, 'nb': False, 'non alphanum': True, 'longueur': 1}\n"
+      "{'mots': ['Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.'], 'POS': ['PROPN', 'VERB', 'CCONJ', 'VERB', 'SCONJ', 'PRON', 'AUX', 'PROPN', 'PRON', 'AUX', 'VERB', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADJ', 'PUNCT'], 'préc': ['START', 'Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine'], 'suiv': ['entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.', 'END'], 'maj': [True, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False], 'nb': [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False], 'non alphanum': [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False], 'longueur': [6, 5, 2, 7, 3, 2, 3, 7, 3, 1, 3, 2, 3, 1, 2, 6, 7, 1]}\n"
      ]
     }
    ],
@@ -134,7 +132,7 @@
     "def feature_extraction(corpus):\n",
     "    \n",
     "    # clés des dictionnaires\n",
-    "    mot = \"mot\"\n",
+    "    mots = \"mots\"\n",
     "    pos = \"POS\"\n",
     "    mot_prec = \"préc\"\n",
     "    mot_suiv = \"suiv\"\n",
@@ -146,35 +144,43 @@
     "    corpus_features = corpus.copy() # copie de la liste pour ne pas modifier la liste d'origine\n",
     "\n",
     "    for phrase in corpus_features: # ajout des features additionnelles\n",
-    "        for prev, word, suiv in zip([{mot : \"START\"}] + phrase[:-1], phrase, phrase[1:] + [{mot : \"END\"}]):\n",
+    "        phrase.update({mot_prec : [], mot_suiv : [], maj : [], num : [], nonAlphanum : [], long : []})\n",
+    "        for prev, word, suiv in zip([\"START\"] + phrase[\"mots\"][:-1], phrase[\"mots\"], phrase[\"mots\"][1:] + [\"END\"]):\n",
     "            # création de triplets (mot précédent, mot, mot suivant)\n",
     "            # avec \"START\" en prev pour le 1er mot\n",
     "            # et \"END\" en suiv pour le dernier\n",
-    "            word.update({\n",
-    "                mot_prec : prev[mot],\n",
-    "                mot_suiv : suiv[mot],\n",
-    "                maj : word[mot].istitle(),\n",
-    "                num : word[mot].isnumeric(),\n",
-    "                nonAlphanum : not word[mot].isalnum(),\n",
-    "                long : len(word[mot])})\n",
+    "            phrase[mot_prec].append(prev)\n",
+    "            phrase[mot_suiv].append(suiv)\n",
+    "            phrase[maj].append(word.istitle())\n",
+    "            phrase[num].append(word.isnumeric())\n",
+    "            phrase[nonAlphanum].append(not word.isalnum)\n",
+    "            phrase[long].append(len(word))\n",
     "\n",
     "    return corpus_features\n",
     "\n",
     "gsd_train_features = feature_extraction(gsd_train)\n",
-    "print(*gsd_train_features[4], sep=\"\\n\")"
+    "print(gsd_train_features[4], sep=\"\\n\")"
    ]
   },
   {
    "source": [
     "## Implémentation de l'algorithme de classification\n",
-    "Il faut choisir une régression logistique ou un perceptron moyenné. > plutôt perceptron (explication dans zoom 17/12)"
+    "On a choisi d'implémenter la classification avec un perceptron moyenné."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
-    "## Evaluation des performances sur le corpus de validation (Dev)\n"
+    "## Evaluation des performances sur le corpus de validation (Dev)\n",
+    "Il faudra bien tester les hyper paramètres (epoch...)"
    ],
    "cell_type": "markdown",
    "metadata": {}
