--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -103,10 +103,10 @@
   {
    "source": [
     "## Extraction des caractéristiques\n",
-    "Pour clarifier le pipeline, nous allons ajouter à notre corpus des nouvelles entrées dans les dictionnaires de chaque phrase afin de stocker les caractéristiques suivantes :\n",
+    "Pour clarifier le pipeline, nous allons créer de nouveaux corpus qui contiennent des nouvelles entrées dans les dictionnaires de chaque phrase afin de stocker les caractéristiques suivantes :\n",
     "- mot\n",
-    "- mot précédent\n",
-    "- mot suivant\n",
+    "- mot précédent : pour le premier mot de la phrase son mot précédent sera \"START\", ce qui permettra de prendre en compte la caractéristique \"être le premier mot\".\n",
+    "- mot suivant : pour le dernier mot, ce sera \"END\".\n",
     "- commence par une lettre majuscule\n",
     "- est numérique\n",
     "- contient des caractères non alphanumériques\n",
