--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -117,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'mots': ['Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.'], 'POS': ['PROPN', 'VERB', 'CCONJ', 'VERB', 'SCONJ', 'PRON', 'AUX', 'PROPN', 'PRON', 'AUX', 'VERB', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADJ', 'PUNCT'], 'préc': ['START', 'Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine'], 'suiv': ['entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.', 'END'], 'maj': [True, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False], 'nb': [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False], 'non alphanum': [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False], 'longueur': [6, 5, 2, 7, 3, 2, 3, 7, 3, 1, 3, 2, 3, 1, 2, 6, 7, 1]}\n"
+      "('mots', ['Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.'])\n('POS', ['PROPN', 'VERB', 'CCONJ', 'VERB', 'SCONJ', 'PRON', 'AUX', 'PROPN', 'PRON', 'AUX', 'VERB', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADJ', 'PUNCT'])\n('préc', ['START', 'Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine'])\n('suiv', ['entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.', 'END'])\n('maj', [True, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False])\n('nb', [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False])\n('non alphanum', [False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True])\n('longueur', [6, 5, 2, 7, 3, 2, 3, 7, 3, 1, 3, 2, 3, 1, 2, 6, 7, 1])\n"
      ]
     }
    ],
@@ -153,13 +153,13 @@
     "            phrase[mot_suiv].append(suiv)\n",
     "            phrase[maj].append(word.istitle())\n",
     "            phrase[num].append(word.isnumeric())\n",
-    "            phrase[nonAlphanum].append(not word.isalnum)\n",
+    "            phrase[nonAlphanum].append(not word.isalnum())\n",
     "            phrase[long].append(len(word))\n",
     "\n",
     "    return corpus_features\n",
     "\n",
     "gsd_train_features = feature_extraction(gsd_train)\n",
-    "print(gsd_train_features[4], sep=\"\\n\")"
+    "print(*gsd_train_features[4].items(), sep=\"\\n\")"
    ]
   },
   {
